--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div id="main-content">
     <h1>Task Lister Lite™️</h1>
 
-    <form id="create-task-form" action="" method="POST">
+    <form id="create-task-form">
       <label for="new-task-description">Task description:</label>
       <input type="text" id="new-task-description" name="new-task-description" placeholder="description">
       <input type="submit" value="Create New Task">
@@ -20,9 +20,7 @@
       <ul id="tasks">
       </ul>
     </div>
-
-    <script src="./src/index.js"></script>
   </div>
-
+  <script src="./src/index.js"></script>
 </body>
 </html>
